<resources>
    <string name="app_name">Cancer Helpmate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="start_of_treatment">Start of treatment</string>
    <string name="your_name">Your name</string>
    <string name="end_of_treatment">End of treatment</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="treatment">Treatment</string>
    <string name="chemotherapy">Chemotherapy</string>
    <string name="radiotherapy">Radiotherapy</string>
    <string name="surgery">Surgery</string>
    <string name="bone_marrow">Bone Marrow and Stem Cell Transplants</string>
    <string name="personalise_your_profile">Personalise your profile</string>
    <string name="save">Save</string>
    <string name="other">Other</string>
    <string name="Welcome">Welcome</string>
    <string name="setup_profile">Setup Profile</string>
    <string name="profile">Profile</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="reset_app">Reset App</string>
    <string name="menu_journal">Journal</string>
    <string name="day_tracker">Day Tracker</string>
    <string name="pain_level">Pain Level :</string>
    <string name="menu_day_tracker">Day Tracker</string>
    <string name="today">Today</string>
    <string name="menu_checklist">Checklist</string>
    <string name="more_detail">Write more detail about the item if needed</string>
    <string name="title">Title</string>
    <string name="tap_day_enter">Tap here to enter a record for today</string>
    <string name="menu_wellbeing">Wellbeing</string>
    <string name="advanced_filter">Advanced Filter</string>
    <string name="breakfast">Breakfast</string>
    <string name="tap_breakfast">Tap here to enter today\'s breakfast</string>
    <string name="recipe_browser">Recipe Browser</string>
    <string name="select">Select</string>
    <string name="change">Change</string>
    <string name="select_meal">Choose a meal to begin tracking your statistics</string>
    <string name="daily_stats">Today\'s Nutrition</string>
    <string name="lunch">Lunch</string>
    <string name="tap_lunch">Tap here to enter today\'s lunch</string>
    <string name="dinner">Dinner</string>
    <string name="tap_dinner">Tap here to enter today\'s dinner</string>
    <string name="tap_supper">Tap here to enter today\'s supper</string>
    <string name="tap_extra">Tap to enter any additional meals</string>
    <string name="supper">Supper</string>
    <string name="extra">Extra</string>
    <string name="meals_text">Today\'s Meals :</string>
    <string name="add">Add</string>
    <string name="sort">Sort</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="filter">Filter</string>
    <string name="apply">Apply</string>
    <string name="menu_resources">Resources</string>
    <string name="emotion">Emotion:</string>
    <string name="breathing_exercise">Breathing Exercise</string>
    <string name="start">Start</string>
    <string name="breathe_out">Breathe out …</string>
    <string name="breathe_in">Breathe in …</string>
    <string name="stop">Stop</string>
    <string name="menu_activities">Activities</string>
    <string name="sleep_aid">SleepAid</string>
    <string name="add_any_comments_about_your_day">Add any comments about your day :</string>
    <string name="weekly_report">Weekly Report</string>
    <string name="quality_of_life">Quality of Life</string>
    <string name="how_would_you_rate_your_quality_of_life_in_the_last_week">How would you rate your quality of life in the last week?</string>
    <string name="how_satisfied_are_you_with_your_health_in_the_last_week">How satisfied are you with your health in the last week?</string>
    <string name="how_available_has_the_information_that_you_need_in_relation_to_your_cancer_experience_been_in_the_last_week">How available has the information that you need in relation to your cancer experience been in the last week?</string>
    <string name="send">Send</string>
    <string name="additional_comments">Additional Comments</string>
    <string name="tap_day_tracker_weekly">Tap here to complete weekly report</string>
    <string name="pain_level_category">Pain Level</string>
    <string name="tap_here_to_check_out_some_activities">Tap here to check out some activities</string>
    <string name="second_name">Second name(s)</string>
    <string name="first_name">First name</string>
    <string name="fatigue_level_category">Fatigue Level</string>
    <string name="appetite_level_category">Appetite Level</string>
    <string name="no_treatment">No Treatment</string>
    <string name="very_tired">Very Tired</string>
    <string name="not_tired">Not Tired</string>
    <string name="lots_of_pain">Lots of Pain</string>
    <string name="no_pain">No Pain</string>
    <string name="no_appetite">No Appetite</string>
    <string name="lot_of_appetite">Lots of Appetite</string>
    <string name="nutrition">Nutrition</string>
    <string name="gender">Gender</string>
    <string name="dry_and_sore_mouth">Dry and Sore mouth</string>
    <string name="problems_chewing">Problems Chewing</string>
    <string name="loss_of_taste_or_smell">Loss of Taste or Smell</string>
    <string name="feeling_sick">Feeling Sick</string>
    <string name="healthy_eating">Healthy Eating</string>
    <string name="full_recipe_list">Full Recipe List</string>
    <string name="hcp_email">Health Care Supervisor Email</string>
    <string name="choose_a_profile_picture">Choose a profile picture :</string>
    <string name="welcome">Welcome</string>
    <string name="next">Next</string>
    <string name="quiz">Quiz</string>
    <string name="finish">Finish</string>
    <string name="my_hospital">My Hospital</string>
    <string name="hospital_website"><u>Hospital Website</u></string>
    <string name="quiz_start_text">Test your knowledge and improve your high score! \n\n Click below to begin</string>
    <string name="submit">Submit</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="acknowledgement_description">Some of the icons in this application were sourced from the following artists from flaticon.com \n\n
                                                • Freepik\n
                                                • DinosoftLabs\n
                                                • Vectors Market\n
                                                • ultimatearm\n
                                                • dDara\n
                                                • Smashicons\n</string>
</resources>
