<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_wellbeing"
            android:icon="@drawable/ic_wellbeing"
            android:title="@string/menu_wellbeing" />

        <item
            android:id="@+id/nav_day_tracker"
            android:icon="@drawable/ic_day_tracker_menu"
            android:title="@string/menu_day_tracker" />

        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/ic_activities"
            android:title="@string/menu_activities" />

        <item
            android:id="@+id/nav_my_hospital"
            android:icon="@drawable/ic_hospital"
            android:title="@string/my_hospital" />

        <item
            android:id="@+id/nav_checklist"
            android:icon="@drawable/ic_checkbox"
            android:title="@string/menu_checklist" />

        <item
            android:id="@+id/nav_resources"
            android:icon="@drawable/ic_resources"
            android:title="@string/menu_resources" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/menu_settings" />
    </group>
</menu>
