<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cancerhelpmate.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.cancerhelpmate.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile">
    </fragment>

    <fragment
        android:id="@+id/nav_day_tracker"
        android:name="com.example.cancerhelpmate.ui.daytracker.DayTrackerFragment"
        android:label="@string/menu_day_tracker"
        tools:layout="@layout/fragment_daytracker">
    </fragment>

    <fragment
        android:id="@+id/nav_journal"
        android:name="com.example.cancerhelpmate.ui.journal.JournalFragment"
        android:label="@string/menu_journal"
        tools:layout="@layout/fragment_journal">
    </fragment>

    <fragment
        android:id="@+id/nav_checklist"
        android:name="com.example.cancerhelpmate.ui.checklist.ChecklistFragment"
        android:label="@string/menu_checklist"
        tools:layout="@layout/fragment_checklist">
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.cancerhelpmate.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings">
    </fragment>

</navigation>