<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include
        layout="@layout/toolbar_close"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <ScrollView
        android:id="@+id/fragment_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:background="@drawable/profile_gradient_background">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/profile_edit_dialog_name"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:inputType="textCapWords"
                android:hint="@string/your_name"/>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_of_treatment"/>

            <Button
                android:id="@+id/profile_edit_dialog_start_date_button"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                style="@style/AppTheme.Button1"
                />

            <TextView
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end_of_treatment"/>

            <Button
                android:id="@+id/profile_edit_dialog_end_date_button"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                style="@style/AppTheme.Button1"
                />

            <TextView
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diagnosis"/>

            <Spinner
                android:id="@+id/profile_edit_dialog_diagnosis_spinner"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp" />

            <TextView
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/treatment"/>

            <CheckBox
                android:id="@+id/profile_edit_dialog_treatment_chemotherapy"
                android:text="@string/chemotherapy"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="56dp"/>

            <CheckBox
                android:id="@+id/profile_edit_dialog_treatment_radiotherapy"
                android:text="@string/radiotherapy"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="56dp"/>

            <CheckBox
                android:id="@+id/profile_edit_dialog_treatment_surgery"
                android:text="@string/surgery"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="56dp"/>

            <CheckBox
                android:id="@+id/profile_edit_dialog_treatment_bone_marrow"
                android:text="@string/bone_marrow"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="56dp"/>

            <CheckBox
                android:id="@+id/profile_edit_dialog_treatment_other"
                android:text="@string/other"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="56dp"/>

            <Button
                android:id="@+id/profile_edit_dialog_save_button"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                style="@style/AppTheme.Button1"
                android:text="@string/save"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
