<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="entry"
            type="com.example.cancerhelpmate.database.daytracker.DayTrackerWeeklyEntry"
            />

    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/day_tracker_dialog_toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/colorAccent"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weekly_report"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center"/>

                <ImageButton
                    android:id="@+id/day_tracker_weekly_dialog_close"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="end"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_close_white"/>

            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                style="@style/App.TextAppearance.Large"
                android:text="@string/how_would_you_rate_your_quality_of_life_in_the_last_week"
                />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:numStars="5"
                android:rating="@={entry.quality_of_life}"
                android:theme="@style/RatingBar"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                style="@style/App.TextAppearance.Large"
                android:text="@string/how_satisfied_are_you_with_your_health_in_the_last_week"
                />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:numStars="5"
                android:theme="@style/RatingBar"
                android:rating="@={entry.health}"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                style="@style/App.TextAppearance.Large"
                android:text="@string/how_available_has_the_information_that_you_need_in_relation_to_your_cancer_experience_been_in_the_last_week"
                />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:numStars="5"
                android:theme="@style/RatingBar"
                android:rating="@={entry.information}"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_margin="16dp"
                android:hint="@string/additional_comments"
                android:text="@={entry.comment}"
                />

        </LinearLayout>

        <Button
            android:id="@+id/day_tracker_weekly_dialog_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/send"
            />
    </RelativeLayout>
</layout>