<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="settingsViewModel"
            type="com.example.cancerhelpmate.ui.settings.SettingsViewModel"
            />
    </data>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/settings_reset_button"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            style="@style/AppTheme.Button1"
            android:text="@string/reset_app"/>

        <Button
            android:id="@+id/settings_acknowledgements_button"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_below="@+id/settings_reset_button"
            style="@style/AppTheme.Button1"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/acknowledgements"
            />

        <ImageView
            android:id="@+id/settings_acknowledgements_dropdown"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_arrow_down_black"
            android:layout_alignTop="@+id/settings_acknowledgements_button"
            android:layout_alignParentRight="true"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            />

        <TextView
            android:id="@+id/settings_acknowledgements_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings_acknowledgements_button"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            style="@style/App.TextAppearance.Medium"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            android:text="@string/acknowledgement_description"
            />


    </RelativeLayout>
</layout>